# CO2

./: .gitignore  README.md  package-lock.json  package.json
carbon-frontend/: package-lock.json  package.json
carbon-frontend/src/: pages.json
carbon-frontend/src/api/: request.js
carbon-frontend/src/pages/dashboard/: dashboard.vue
carbon-frontend/src/pages/index/: index.vue
carbon-frontend/src/pages/login/: login.vue
carbon-frontend/src/pages/record/: add.vue  list.vue
carbon-frontend/src/pages/shop/: index.vue
carbon-frontend/src/pages/userCenter/: index.vue  loginLog.vue  rank.vue
carbon_backend/: advanced_scraper.py  auth.py  database.py  main.py  ml_engine.py  models.py  pyproject.toml  requirements.txt  utils.py
carbon_backend/config/: headers.json  urls.json
carbon_backend/debugs/: debug_wuhan.html
carbon_backend/scripts/: generate_mock_data.py
