[project]
name = "carbon-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "pandas>=3.0.2",
    "pdfplumber>=0.11.9",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.26",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.44.0",
]

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple/"
default = true
